@@ -7,6 +7,13 @@ import java.util.Map;
 /**
  * Represents a single factual security finding extracted by deterministic Java analysis. These
  * findings are sent to the AI for reasoning about attack chains.
+ *
+ * @param type the type of finding (e.g., "PUBLIC_ENDPOINT", "SCHEMA_FIELD")
+ * @param severity the severity level ("CRITICAL", "HIGH", "MEDIUM", "LOW", "INFO")
+ * @param category the finding category (e.g., "security", "data-exposure", "mass-assignment")
+ * @param endpoint the affected endpoint (e.g., "GET /users/all")
+ * @param description human-readable description of the finding
+ * @param metadata additional context (schema names, field names, dependencies, etc.)
  */
 @JsonInclude(JsonInclude.Include.NON_NULL)
 public record SecurityFinding(
@@ -18,21 +25,20 @@ public record SecurityFinding(
     String description, // Human-readable description
     Map<String, Object> metadata
     // Additional context (schema names, field names, dependencies, etc.)
-    ) {
+) {
 
-  /** Factory method for public endpoint findings */
+  /** Factory method for public endpoint findings. */
   public static SecurityFinding publicEndpoint(String method, String path) {
     return new SecurityFinding(
         "PUBLIC_ENDPOINT",
         "HIGH",
         "security",
         method + " " + path,
-        String.format(
-            "Endpoint %s %s has no security requirements (publicly accessible)", method, path),
+        "Endpoint %s %s has no security requirements (publicly accessible)".formatted(method, path),
         Map.of("method", method, "path", path));
   }
 
-  /** Factory method for endpoint returning a schema */
+  /** Factory method for endpoint returning a schema. */
   public static SecurityFinding endpointReturnsSchema(
       String method, String path, String schemaName, List<String> fields) {
     return new SecurityFinding(
@@ -40,7 +46,7 @@ public record SecurityFinding(
         "INFO",
         "data-exposure",
         method + " " + path,
-        String.format("Endpoint %s %s returns schema '%s'", method, path, schemaName),
+        "Endpoint %s %s returns schema '%s'".formatted(method, path, schemaName),
         Map.of(
             "method", method,
             "path", path,
@@ -48,7 +54,7 @@ public record SecurityFinding(
             "fields", fields));
   }
 
-  /** Factory method for endpoint accepting a schema */
+  /** Factory method for endpoint accepting a schema. */
   public static SecurityFinding endpointAcceptsSchema(
       String method, String path, String schemaName, List<String> fields) {
     return new SecurityFinding(
@@ -56,8 +62,7 @@ public record SecurityFinding(
         "INFO",
         "mass-assignment",
         method + " " + path,
-        String.format(
-            "Endpoint %s %s accepts schema '%s' in request body", method, path, schemaName),
+        "Endpoint %s %s accepts schema '%s' in request body".formatted(method, path, schemaName),
         Map.of(
             "method", method,
             "path", path,
@@ -65,7 +70,7 @@ public record SecurityFinding(
             "fields", fields));
   }
 
-  /** Factory method for sensitive field findings */
+  /** Factory method for sensitive field findings. */
   public static SecurityFinding schemaContainsSensitiveField(
       String schemaName, String fieldName, String fieldType) {
     return new SecurityFinding(
@@ -73,16 +78,15 @@ public record SecurityFinding(
         "MEDIUM",
         "data-exposure",
         null,
-        String.format(
-            "Schema '%s' contains sensitive field '%s' (type: %s)",
-            schemaName, fieldName, fieldType),
+        "Schema '%s' contains sensitive field '%s' (type: %s)"
+            .formatted(schemaName, fieldName, fieldType),
         Map.of(
             "schema", schemaName,
             "field", fieldName,
             "fieldType", fieldType));
   }
 
-  /** Factory method for writable sensitive field findings */
+  /** Factory method for writable sensitive field findings. */
   public static SecurityFinding writableSensitiveField(
       String method, String path, String schemaName, String fieldName) {
     return new SecurityFinding(
@@ -90,9 +94,8 @@ public record SecurityFinding(
         "HIGH",
         "mass-assignment",
         method + " " + path,
-        String.format(
-            "Endpoint %s %s allows writing to sensitive field '%s' in schema '%s'",
-            method, path, fieldName, schemaName),
+        "Endpoint %s %s allows writing to sensitive field '%s' in schema '%s'"
+            .formatted(method, path, fieldName, schemaName),
         Map.of(
             "method", method,
             "path", path,
@@ -100,7 +103,7 @@ public record SecurityFinding(
             "field", fieldName));
   }
 
-  /** Factory method for dependency chain findings */
+  /** Factory method for dependency chain findings. */
   public static SecurityFinding schemaDependency(
       String sourceSchema, String targetSchema, String viaEndpoint) {
     return new SecurityFinding(
@@ -108,7 +111,7 @@ public record SecurityFinding(
         "INFO",
         "data-flow",
         viaEndpoint,
-        String.format("Schema '%s' references schema '%s'", sourceSchema, targetSchema),
+        "Schema '%s' references schema '%s'".formatted(sourceSchema, targetSchema),
         Map.of(
             "sourceSchema", sourceSchema,
             "targetSchema", targetSchema,
